///		Changelog		///

@date 03/02/2015
- Added changelog